[gd_scene load_steps=10 format=2]

[ext_resource path="res://tilesets/white-block-16x16.tres" type="TileSet" id=1]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/World.gd" type="Script" id=3]
[ext_resource path="res://scripts/Dialog.gd" type="Script" id=4]
[ext_resource path="res://scenes/Projectile.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Sign.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.133333, 0.133333, 0.133333, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.133333, 0.133333, 0.133333, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 8 )

[node name="World" type="Node2D"]
script = ExtResource( 3 )
camera_limit_right = 704

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 112, 104 )
bullet_resource = ExtResource( 5 )

[node name="TileMap-16x16" type="TileMap" parent="."]
z_index = 1
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 43, 0, 0, 65536, 0, 0, 65579, 0, 0, 131072, 0, 0, 131115, 0, 0, 196608, 0, 0, 196651, 0, 0, 262144, 0, 0, 262187, 0, 0, 327680, 0, 0, 327723, 0, 0, 393216, 0, 0, 393256, 0, 0, 393257, 0, 0, 393258, 0, 0, 393259, 0, 0, 458752, 0, 0, 458789, 0, 0, 458790, 0, 0, 458791, 0, 0, 458792, 0, 0, 458793, 0, 0, 458794, 0, 0, 458795, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 524311, 0, 0, 524312, 0, 0, 524313, 0, 0, 524317, 0, 0, 524318, 0, 0, 524319, 0, 0, 524320, 0, 0, 524321, 0, 0, 524322, 0, 0, 524323, 0, 0, 524324, 0, 0, 524325, 0, 0, 524326, 0, 0, 524327, 0, 0, 524328, 0, 0, 524329, 0, 0, 524330, 0, 0, 524331, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 589847, 0, 0, 589848, 0, 0, 589849, 0, 0, 589853, 0, 0, 589854, 0, 0, 589855, 0, 0, 589856, 0, 0, 589857, 0, 0, 589858, 0, 0, 589859, 0, 0, 589860, 0, 0, 589861, 0, 0, 589862, 0, 0, 589863, 0, 0, 589864, 0, 0, 589865, 0, 0, 589866, 0, 0, 589867, 0, 0 )

[node name="TileMap-8x8" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 8, 8 )
format = 1

[node name="UI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="C" type="CanvasLayer" parent="UI"]

[node name="VB" type="VBoxContainer" parent="UI/C"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="UI/C/VB"]
margin_right = 512.0
margin_bottom = 148.0
size_flags_vertical = 3

[node name="M" type="MarginContainer" parent="UI/C/VB"]
margin_top = 152.0
margin_right = 512.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="BGP" type="Panel" parent="UI/C/VB/M"]
margin_right = 512.0
margin_bottom = 148.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HB" type="HBoxContainer" parent="UI/C/VB/M/BGP"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="M" type="MarginContainer" parent="UI/C/VB/M/BGP/HB"]
margin_right = 336.0
margin_bottom = 148.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 6
custom_constants/margin_top = 6
custom_constants/margin_left = 6
custom_constants/margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialog" type="RichTextLabel" parent="UI/C/VB/M/BGP/HB/M"]
margin_left = 6.0
margin_top = 6.0
margin_right = 330.0
margin_bottom = 142.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="UI/C/VB/M/BGP/HB/M/Dialog"]
wait_time = 0.1
autostart = true

[node name="P" type="Panel" parent="UI/C/VB/M/BGP/HB"]
margin_left = 340.0
margin_right = 512.0
margin_bottom = 148.0
rect_min_size = Vector2( 172, 0 )
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="M" type="MarginContainer" parent="UI/C/VB/M/BGP/HB/P"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 6
custom_constants/margin_top = 6
custom_constants/margin_left = 6
custom_constants/margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VB" type="VBoxContainer" parent="UI/C/VB/M/BGP/HB/P/M"]
margin_left = 6.0
margin_top = 6.0
margin_right = 166.0
margin_bottom = 142.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HEALTH" type="HBoxContainer" parent="UI/C/VB/M/BGP/HB/P/M/VB"]
margin_right = 160.0
margin_bottom = 15.0

[node name="label" type="Label" parent="UI/C/VB/M/BGP/HB/P/M/VB/HEALTH"]
margin_right = 156.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "HP:"

[node name="value" type="Label" parent="UI/C/VB/M/BGP/HB/P/M/VB/HEALTH"]
margin_left = 160.0
margin_right = 160.0
margin_bottom = 15.0

[node name="GOLD" type="HBoxContainer" parent="UI/C/VB/M/BGP/HB/P/M/VB"]
margin_top = 19.0
margin_right = 160.0
margin_bottom = 34.0

[node name="label" type="Label" parent="UI/C/VB/M/BGP/HB/P/M/VB/GOLD"]
margin_right = 144.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "GOLD:"

[node name="value" type="Label" parent="UI/C/VB/M/BGP/HB/P/M/VB/GOLD"]
margin_left = 148.0
margin_right = 160.0
margin_bottom = 15.0
text = "0"

[node name="S" type="HBoxContainer" parent="UI/C/VB/M/BGP/HB/P/M/VB"]
margin_top = 38.0
margin_right = 160.0
margin_bottom = 53.0

[node name="Label" type="Label" parent="UI/C/VB/M/BGP/HB/P/M/VB/S"]
margin_right = 160.0
margin_bottom = 15.0
size_flags_horizontal = 3

[node name="DAMAGE" type="HBoxContainer" parent="UI/C/VB/M/BGP/HB/P/M/VB"]
margin_top = 57.0
margin_right = 160.0
margin_bottom = 72.0

[node name="label" type="Label" parent="UI/C/VB/M/BGP/HB/P/M/VB/DAMAGE"]
margin_right = 149.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "DAMAGE:"

[node name="value" type="Label" parent="UI/C/VB/M/BGP/HB/P/M/VB/DAMAGE"]
margin_left = 153.0
margin_right = 160.0
margin_bottom = 15.0
text = "1"

[node name="SPEED" type="HBoxContainer" parent="UI/C/VB/M/BGP/HB/P/M/VB"]
margin_top = 76.0
margin_right = 160.0
margin_bottom = 91.0

[node name="label" type="Label" parent="UI/C/VB/M/BGP/HB/P/M/VB/SPEED"]
margin_right = 149.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "SPEED:"

[node name="value" type="Label" parent="UI/C/VB/M/BGP/HB/P/M/VB/SPEED"]
margin_left = 153.0
margin_right = 160.0
margin_bottom = 15.0
text = "1"

[node name="TIME" type="HBoxContainer" parent="UI/C/VB/M/BGP/HB/P/M/VB"]
margin_top = 95.0
margin_right = 160.0
margin_bottom = 110.0

[node name="label" type="Label" parent="UI/C/VB/M/BGP/HB/P/M/VB/TIME"]
margin_right = 149.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "TIME:"

[node name="value" type="Label" parent="UI/C/VB/M/BGP/HB/P/M/VB/TIME"]
margin_left = 153.0
margin_right = 160.0
margin_bottom = 15.0
text = "1"

[node name="HazzardTest" type="Area2D" parent="."]
position = Vector2( 340, 152 )
scale = Vector2( 45.3779, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="HazzardTest"]
shape = SubResource( 3 )

[node name="Polygon2D" type="Polygon2D" parent="HazzardTest"]
color = Color( 1, 0, 0, 1 )
polygon = PoolVector2Array( -8, -8, -8, 8, 8, 8, 8, -8 )

[node name="Sign" parent="." instance=ExtResource( 6 )]
position = Vector2( 176, 120 )
dialogue = [ "Welcome to the Town!" ]

[node name="Sign2" parent="." instance=ExtResource( 6 )]
position = Vector2( 392, 120 )
dialogue = [ "You must wonder why we built our town on top of lava...", "Honestly, I don't think we had much of a choice in the matter." ]

[node name="Sign3" parent="." instance=ExtResource( 6 )]
position = Vector2( 616, 104 )
dialogue = [ "The Cave" ]
[connection signal="died" from="Player" to="." method="_on_Player_died"]
[connection signal="health_changed" from="Player" to="." method="_on_Player_health_changed"]
[connection signal="timeout" from="UI/C/VB/M/BGP/HB/M/Dialog/Timer" to="UI/C/VB/M/BGP/HB/M/Dialog" method="_on_Timer_timeout"]
[connection signal="body_entered" from="HazzardTest" to="." method="_on_Area2D_body_entered"]
[connection signal="send_message" from="Sign" to="." method="_on_Sign_send_message"]
[connection signal="send_message" from="Sign2" to="." method="_on_Sign_send_message"]
[connection signal="send_message" from="Sign3" to="." method="_on_Sign_send_message"]
